--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
   <meta charset=utf-8>
   <title>`echo $TM_FILENAME|cut -d. -f1`</title>
+  <link rel="stylesheet" href="css/main.css" />
 </head>
 <body>
-Привет мир!<br>
+<div class="hello">Привет мир!<br>
 Я мадина))
+</div>
 
 </body>
 </html>
